--- a/Winform_XANGDAU/Projects/Properties/Resources.resx
+++ b/Winform_XANGDAU/Projects/Properties/Resources.resx
@@ -130,8 +130,8 @@
   <data name="comua_w100" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\comua_w100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="email icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Icon White\email icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="phone icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Icon White\phone icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="image41" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\XANGDAU Img\image41.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -145,9 +145,6 @@
   <data name="nofitication_w20" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\nofitication_w20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Canhquatgio" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Icon White\Canhquatgio.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="AvatarUser" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon\AvatarUser.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -159,6 +156,9 @@
   </data>
   <data name="waterLevel_w100" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\waterLevel_w100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SingleTank2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\XANGDAU Img\SingleTank2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="wind2_w150" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\wind2_w150.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -175,6 +175,9 @@
   <data name="wind_w150" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\wind_w150.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="image47" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\XANGDAU Img\image47.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="image2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\XANGDAU Img\image2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -190,9 +193,6 @@
   <data name="history_w35" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\history_w35.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="location_w100" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Icon White\location_w100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="password_w50" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\password_w50.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -202,8 +202,8 @@
   <data name="close_w30" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\close_w30.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="more_w40" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Icon White\more_w40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="khongmua_w100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Icon White\khongmua_w100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="image39" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\XANGDAU Img\image39.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -217,6 +217,9 @@
   <data name="image147" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\XANGDAU Img\image147.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="image27" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\XANGDAU Img\image27.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="image9" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\XANGDAU Img\image9.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -226,8 +229,8 @@
   <data name="Setting_w35" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\Setting_w35.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SingleTank2" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\XANGDAU Img\SingleTank2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="more_w40" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Icon White\more_w40.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="change-password_w20" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\change-password_w20.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -244,8 +247,8 @@
   <data name="canhquat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\canhquat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="image27" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\XANGDAU Img\image27.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="location_w100" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Icon White\location_w100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Compass_white" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\Compass_white.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -268,8 +271,8 @@
   <data name="image33" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\XANGDAU Img\image33.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="khongmua_w100" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Icon White\khongmua_w100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Canhquatgio" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Icon White\Canhquatgio.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="IconSimulation_white45" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\IconSimulation_white45.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -280,8 +283,8 @@
   <data name="Simulation_w35" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\Simulation_w35.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="image47" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\XANGDAU Img\image47.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="email icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Icon White\email icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Rainy" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\Icon White\Rainy.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -295,7 +298,7 @@
   <data name="image31" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Pictures\XANGDAU Img\image31.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="phone icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Pictures\Icon White\phone icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Hust" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Pictures\Icon\Hust.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
